# x-skills

./: .gitignore  README.md  pyproject.toml
.codebuddy/plans/: fix-hashtag-posting_265a8916.md  x-skill-cdp-posting-tool_0999aa62.md  x-skill-cdp-posting-tool_2cebb81d(未完成).md  x-skill-cdp-posting-tool_419c6fc3(未完成).md  x-skill-cdp-posting-tool_6504d3eb(未完成).md
.codebuddy/skills/x-poster/: SKILL.md
.codebuddy/skills/x-poster/references/: command_reference.md  troubleshooting.md
.codebuddy/skills/x-poster/scripts/: setup.sh  xpost_run.py
src/x_poster/: __init__.py  cdp_client.py  chrome.py  cli.py  clipboard.py  constants.py  markdown_converter.py  page.py  paste.py  utils.py
src/x_poster/commands/: article.py  check.py  post.py  quote.py  read.py  reply.py  search.py  timeline.py  video.py
